--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,5 +20,5 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: "./"
           server-dir: "/infokaffah.rf.gd/laravel/"
-          dry-run: true
+          # dry-run: true
           fetch-depth: 0
