--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,11 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to FTP server
+      - name: Deploy node_modules to FTP server
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: "./"
-          server-dir: "/infokaffah.rf.gd/htdocs/laravel/"
+          local-dir: "./node_modules/"
+          server-dir: "/infokaffah.rf.gd/htdocs/laravel/node_modules/"
